...
                          fit: BoxFit.cover),
                    ),
                    child: Center(
                        child: Column(children: [
                      const SizedBox(height: 75),
                      Text("- Make the emotion with your face -",
                          key: Key("make-a-face-screen"),
                          textAlign: TextAlign.center,
                          style: TextStyle(
                              color: Colors.black,
                              fontSize: 18,
                              fontWeight: FontWeight.bold,
                              fontFamily: 'TypoRound')),
                      Text(emotionToPick.toUpperCase(),
                          key: Key("emotion-to-pick"),
                          style: TextStyle(
                              shadows: [
                                Shadow(
                                    // bottomLeft
                                    offset: Offset(-1, -1),
                                    color: Colors.black),
...
                              ],
                              fontWeight: FontWeight.w900,
                              color: getColour[emotionToPick],
                              fontFamily: 'TypoRound',
                              fontSize: 55)),
                      Text("LEVEL: $level",
                          key: Key("user-level"),
                          style: TextStyle(
                              color: Colors.black,
                              fontWeight: FontWeight.w700)),
                      SizedBox(height: 40),
                      Container(
                          child: Container(
...
                                                  image: DecorationImage(
                                                      image: AssetImage(
                                                          "assets/images/default profile.png"),
                                                      fit: BoxFit.cover))),
                                          SizedBox(height: 20),
                                          ElevatedButton(
                                              key: Key("take-a-picture-button"),
                                              style: ButtonStyle(
                                                  backgroundColor:
                                                      MaterialStateProperty.all(
                                                          Colors.redAccent)),
                                              onPressed: () {
                                                pickImage();
...
                                              child: Text("Take a Picture")),
                                          SizedBox(height: 10),
                                          Text(
                                            score.toString() +
                                                " / " +
                                                scoreForNewLevel.toString(),
                                            key: Key("user-score"),
                                            style: TextStyle(
                                                shadows: [
                                                  Shadow(
                                                      // bottomLeft
                                                      offset: Offset(-2, -2),
                                                      color: globalColours
...
