...
  Widget build(BuildContext context) {
    Global globalColours = new Global();
    double height = MediaQuery.of(context).size.height;
    double width = MediaQuery.of(context).size.width;
    final player = Provider.of<Player?>(context);
    return Scaffold(
        key: Key("home-screen"),
        appBar: AppBar(
            //  leading: Image.asset('assets/logo.png'),
            automaticallyImplyLeading: false,
            centerTitle: true,
            title: Row(
                mainAxisAlignment: MainAxisAlignment.center,
...
                              width: 150,
                              height: 150,
                            ),
                            iconSize: 125)),
                    Text(
                      "Choose a Face",
                      key: Key("choose-a-face-option"),
                      style: TextStyle(
                          shadows: [
                            Shadow(
                                // bottomLeft
                                offset: Offset(-1, -1),
                                color: Colors.lightGreen),
...
                            height: 120,
                          ),
                          iconSize: 125),
                    ),
                    Text("Make a Face",
                        key: Key(
                            "make-a-face-option"), // remove "TO BE ADDED" text once MakeAFace is complete
                        style: TextStyle(
                            shadows: [
                              Shadow(
                                  // bottomLeft
                                  offset: Offset(-1, -1),
                                  color: Colors.redAccent),
...
